Fix color contrast ratio for month view (#188)

--- a/src/Calendar.less
+++ b/src/Calendar.less
@@ -71,11 +71,11 @@
     &__days {
       &__day {
         &--weekend {
-          color: red;
+          color: rgb(209, 0, 0);
         }
 
         &--neighboringMonth {
-          color: rgb(150, 150, 150);
+          color: rgb(117, 117, 117)
         }
       }
     }
